--- a/Git notebook.ipynb
+++ b/Git notebook.ipynb
@@ -37,8 +37,66 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 管理修改\n"
+    "## 4. 管理修改\n",
+    "- Git跟踪并管理的是修改，而非文件，每次修改，如果不用 git add 到暂存区，那就不会加入到 commit 中\n",
+    "\n",
+    "## 5. 撤销修改\n",
+    "- git checkout -- file， 可以丢弃工作区的修改， 有两种情况， 第一， 文件修改后还没有被放到暂存区，现在，撤销修改就回到和版本库一模一样的状态；第二，文件修改已经添加到暂存区，又做了修改，现在，撤销修改就回到添加到暂存区后的状态；总之，就是让这个文件回到最近一次git commit或git add时的状态。\n",
+    "- git reset HEAD file， 可以把暂存区的修改撤销掉，重新放回工作区， git reset 命令既可以回退版本，也可以把暂存区的修改会退到工作区，当我们使用HEAD时，表示最新的版本。\n",
+    "\n",
+    "## 6. 删除文件\n",
+    "- git rm file， 从版本库中删除文件\n",
+    "- git checkout -- file， 用版本库里的版本替换工作区的版本，无论工作区是修改还是删除，都可以‘一键还原’"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -85,7 +143,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
