update git notebook

--- a/Git notebook.ipynb
+++ b/Git notebook.ipynb
@@ -50,81 +50,108 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 7. 远程仓库\n",
+    "- Git是分布式版本控制系统，同一个Git仓库，可以分不到不同的机器上，最早，肯定只有一台机器有一个原始版本库，此后，别的机器可以克隆这个原始版本库，而且每台机器的版本库其实都是一样的，并没有主次之分。\n",
+    "- 实际情况，找一台电脑充当服务器的角色，每天24小时开机，其他每个人都从这个‘服务器’仓库克隆一份到自己的电脑上，并且各自把各自的提交推送到服务器仓库里，也从服务器仓库中拉取别人的提交。\n",
+    "- GitHub， 一个提供Git仓库托管服务的网站，本地Git仓库和GitHub仓库之间的传输是通过SSH加密的，所以需要一些设置： [1], 使用命令 ssh-keygen -t rsa -C \"youremail@example.com\" 创建SSH Key; [2], 登录GitHub，添加自己的公钥\n",
+    "\n",
+    "### 7.1 添加远程仓库\n",
+    "- git remote add origin git@github.com:michaelliao/learngit.git, 将本地的仓库与GitHub上的远程仓库关联\n",
+    "- git push -u origin master, 将本地库（master分支）所有内容推送到远程库上， 如果远程库是空的，第一次推送master分支时，加上-u参数，Git不但会把本地的master分支内容推送到远程新的master分支，还会把本地的master分支和远程的master分支关联起来，在以后的推送或者拉取时就可以简化命令\n",
+    "\n",
+    "### 7.2 从远程库克隆\n",
+    "- git clone git@@github.com:michaelliao/gitskills.git, 可以将远程库克隆在本地\n",
+    "- 当你从远程仓库克隆时，实际上Git自动把本地的master分支和远程的master分支对应起来了，并且，远程仓库的默认名称是origin。\n",
+    "- git remote， 查看远程库\n",
+    "- git remote -v， 查看远程库更详细的信息\n",
+    "\n",
+    "## 8. 分支管理\n",
+    "- 一个属于自己的分支，别人看不到，还继续在原来的分支上正常工作，而你在自己的分支上干活，想提交就提交，知道开发完毕后，再一次性合并到原来的分支上，这样，既安全，又不影响别人工作。\n",
+    "\n",
+    "### 8.1 创建与合并分支\n",
+    "- HEAD， 指向当前分支\n",
+    "- git branch 【name】, 创建分支\n",
+    "- git checkout 【name】， 切换分支\n",
+    "- git checkout -b dev， 创建并切换分支dev， 相当于 git branch dev； git checkout dev\n",
+    "- git branch， 列出所有分支， 当前分支前面会标一个 * 号\n",
+    "- git merge 【name】， 用于合并指定分支到当前分支\n",
+    "- git branch -d 【name】， 删除分支\n",
+    "\n",
+    "### 8.2 解决冲突\n",
+    "- 当Git无法自动合并分支时，就必须首先解决冲突。解决冲突后，再提交，合并完成\n",
+    "- git log --graph， 可以看到分支合并图\n",
+    "\n",
+    "### 8.3 分支管理策略\n",
+    "- 通常， 合并分支时，Git会用Fast forward模式，但这种模式下，删除分支后，会丢掉分支信息。如果要强制禁用Fast forward模式，Git就会在merge时生成一个新的commit，这样，从分支历史上就可以看出分支信息。\n",
+    "- git commit --no-ff， 表示禁用Fast forward模式\n",
+    "- 分支策略，首先，master分支应该是非常稳定的，也就是仅用来发布新版本，平时不能在上面干活；其次，干活都在dev分支上，也就是说，dev分支是不稳定的\n",
+    "\n",
+    "### 8.4 bug分支\n",
+    "- git stash， 可以把当前工作现场‘储藏’起来，等以后恢复现场后继续工作\n",
+    "- git stash apply， 恢复后，stash内容并不删除，需要用git stash drop来删除\n",
+    "- git stash pop， 恢复的同时把stash内容也删了\n",
+    "- git stash list， 查看stash列表， 可以多次stash，恢复时，先用git stash list查看， 然后恢复指定的stash\n",
+    "\n",
+    "### 8.5 Feature分支\n",
+    "- git branch -D 【name】， 强行删除一个没有被合并过的分支\n",
+    "\n",
+    "### 8.6 多人协作\n",
+    "多人协作的工作模式通常是这样：\n",
+    "- 首先， 可以试图用 git push origin 【branch-name】推送自己的修改；\n",
+    "- 如果推送失败，则因为远程分支比你的本地更新，需要先用 git pull 试图合并；\n",
+    "- 如果合并有冲突，则解决冲突，并在本地提交；\n",
+    "- 没有冲突或者解决掉冲突后， 再用 git push origin 【branch-name】 推送就能成功！\n",
+    "- 如果 git pull 提示 no tracking information， 则说明本地分支和远程分支的链接关系没有创建，用命令 git branch --set-upstream-to 【branch-name】 origin/【branch-name】\n",
+    "\n",
+    "### 8.7 rebase\n",
+    "- git rebase, 可以把本地未push的分叉提交历史整理成直线， 其目的是使得我们在查看历史提交的变化时更容易，因为分叉的提交需要三方对比\n",
+    "\n",
+    "## 9. 标签管理\n",
+    "- Git的标签虽然是版本库的快照，但其实它就是指向某个commit的指针，所以，创建和删除标签都是瞬间完成的。\n",
+    "- git tag 【name】， 在当前分支的最新提交上打一个新标签\n",
+    "- git tag， 查看所有标签\n",
+    "- git tag 【tagname】 【commit-id】， 给指定的commit id打一个新标签\n",
+    "- git show 【tagname】， 查看标签信息以及说明文字\n",
+    "- git tag -a 【tagname】 -m 【说明文字】 【commit-id】， 创建带有说明的标签， -a指定标签名， -m指定说明文字\n",
+    "- 标签总是和某个commit挂钩，如果这个commit既出现在master分支，又出现在dev分支，那么在这两个分支上都可以看到这个标签\n",
+    "\n",
+    "- git tag -d 【tagname】， 删除标签\n",
+    "- git push origin 【tagname】， 推送某个标签到远程\n",
+    "- git push origin --tags, 一次性推送全部尚未推送到远程的本地标签\n",
+    "- 如果标签已经推送到远程，要删除远程标签就需要先从本地删除 git tag -d 【tagname】， 然后，再从远程删除， git push origin :refs/tags/【tagname】\n",
+    "\n",
+    "## 10. 自定义Git\n",
+    "- git config --global color.ui true, 让Git显示颜色\n",
+    "\n",
+    "### 10.1 忽略特殊文件\n",
+    "- .gitignore文件， 将要忽略的文件名填进去，Git就会自动忽略这些文件， GitHub已经为我们准备了各种配置文件，只需要组合一下就可以使用了，所有配置文件可以直接在线浏览：https://github.com/github/gitignore\n",
+    "- 有时候，想添加一个文件到Git，但发现添加不了，原因是这个文件被 .gitignore 忽略了， 如果确实向添加该文件，可以使用 git add -f 【filename】 强制添加\n",
+    "- git check-ignore -v 【filename】， 检查忽略文件的的那个规则\n",
+    "\n",
+    "### 10.2 配置别名\n",
+    "- git config --global alias.st status, 将git status 配置为 git st\n",
+    "- 配置Git时，加上 --global 是针对当前用户起作用的，如果不加，那只针对当前的仓库起作用。每个仓库的Git配置文件都放在 .git/config文件中：别名就在【alias】后面，要删除别名，直接把对应的行删掉即可。\n",
+    "- 当前用户的Git配置文件放在用户主目录下的一个隐藏文件 .gitconfig 中。\n",
+    "\n",
+    "### 10.3 搭建Git服务器\n",
+    "- sudo apt-get install git, 安装git\n",
+    "- sudo adduser git, 创建一个git用户，用来运行git服务\n",
+    "- 收集所以需要登录的用户的公钥，就是他们自己的id_rsa.pub文件，把所以公钥导入/home/git/.ssh/authorized_keys文件里，一行一个。\n",
+    "- 选定一个目录作为Git仓库，假定是/srv/sample.git, 在/srv目录下输入命令 sudo git init --bare sample.git, Git就会创建一个裸仓库，裸仓库没有工作区，因为服务器上的Git仓库纯粹是为了共享，所以不让用户直接登录服务器去改工作区，并且服务器上的Git仓库通常都以.git结尾。 然后把owner改为git: sudo chown -R git:git sample.git\n",
+    "- 处于安全考虑，第二步创建的git用户不允许登录shell，可以通过编辑/etc/passwd文件完成， 将git:x:1001:1001:,,,:/home/git:/bin/bash 改为 git:x:1001:1001:,,,:/home/git:/usr/bin/git-shell, 这样， git用户可以正常通过ssh使用git，但无法登录shell，因为我们为git用户指定的git-shell每次一登录就自动退出。\n",
+    "- git clone git@server:/srv/sample.git 克隆远程仓库\n",
+    "\n",
+    "管理公钥\n",
+    "\n",
+    "- 如果团队很小，把每个人的公钥收集起来放到服务器的/home/git/.ssh/authorized_keys文件里就是可行的。如果团队有几百号人，就没法这么玩了，这时，可以用Gitosis来管理公钥。\n",
+    "\n",
+    "管理权限\n",
+    "\n",
+    "- 有很多不但视源代码如生命，而且视员工为窃贼的公司，会在版本控制系统里设置一套完善的权限控制，每个人是否有读写权限会精确到每个分支甚至每个目录下。因为Git是为Linux源代码托管而开发的，所以Git也继承了开源社区的精神，不支持权限控制。不过，因为Git支持钩子（hook），所以，可以在服务器端编写一系列脚本来控制提交等操作，达到权限控制的目的。Gitolite就是这个工具。\n"
+   ]
   }
  ],
  "metadata": {
@@ -143,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
