--- a/编码规范补充.md
+++ b/编码规范补充.md
@@ -2,26 +2,27 @@
 
 1.  函数参数带有默认值的情况下，需注意，`=`两边不允许有空格，此处需注意，去掉`=`两边的空格，是不符合PEP8规范的，但是我们在代码提交时，`=`两边有空格时不符合规范的，所以此处以代码提交的检测标准为准：![image-20200716165256966](F:\MyNotebook\doc\picture\规范-1.png)
 2.  语法警告，注意：`is`与`==`的区别，参考：https://www.cnblogs.com/wangkun122/p/9082088.html：![image-20200718145748728](F:\MyNotebook\doc\picture\规范-2.png)
-3.   常量与变量的值判断顺序，以及字符拼写问题![image-20200718151337184](F:\MyNotebook\doc\picture\规范-3.png)
-4.   字符串中含有转义字符的使用注意，如下，如果就是使用字符串'\D'，而不是其转义，则需在 '\D' 前添加r，即 r'\D'，或者'\\D', python3转义字符参考：https://www.cnblogs.com/lijiazhang/p/9588925.html，https://www.cnblogs.com/lzn-2018/p/10851964.html![image-20200718155757758](F:\MyNotebook\doc\picture\规范-4.png)
+3.  常量与变量的值判断顺序，以及字符拼写问题![image-20200718151337184](F:\MyNotebook\doc\picture\规范-3.png)
+4.  字符串中含有转义字符的使用注意，如下，如果就是使用字符串'\D'，而不是其转义，则需在 '\D' 前添加r，即 r'\D'，或者'\\D', python3转义字符参考：https://www.cnblogs.com/lijiazhang/p/9588925.html，https://www.cnblogs.com/lzn-2018/p/10851964.html![image-20200718155757758](F:\MyNotebook\doc\picture\规范-4.png)
 5.  目录分隔符，python是跨平台的。在Windows上，文件的路径分隔符是'\'，在Linux上是'/'，如果对一个路径进行切割或者拼接时，不要直接使用'\'或'/'，而是要用os.sep，![image-20200720121142227](F:\MyNotebook\doc\picture\规范-5.png)
 6.  模块引用规范：对于已经添加到sys.path中的路径，在模块引用时，为保证命令行和pycharm执行脚本的同时正确性，需在模块引用时，以添加到sys.path中的路径为起始搜索来import 模块，即使两个模块在同一路径下。
 7.  文件路径注意，在使用文件路径时需注意，并不是所有在Windows系统下的路径都是`E:\\work_manage\\**`这种格式，也有可能是`E:/work_manage/**`格式的，如下所示，所以大家在对一个路径进行split操作时，务必检查一下该路径中的分隔符是哪一种。![image-20200720205535862](F:\MyNotebook\doc\picture\规范-6.png)
 8.  类继承时，不允许使用多继承，只需要知道，python可以支持多继承，但同时也具备多继承的二义性的缺点，大部分标准代码中都不会使用多继承。如下：![image-20200721085723142](F:\MyNotebook\doc\picture\规范-7.png)
 9.  调用含有可变参数的函数时，![image-20200725085322520](F:\MyNotebook\doc\picture\规范-8.png)需注意，传参方式如下，前两种都可以正常打印可变参数，第三种则为错误用法，前两者中，推荐使用第一种，因为第二种不符合pep8规范：![image-20200725090317392](F:\MyNotebook\doc\picture\规范-9.png)
-10.      返回值判断不要直接用0或1，需要使用枚举常量，0和1可以使用在索引位置处![image-20200725101321116](F:\MyNotebook\doc\picture\规范-10.png)
-11.      函数参数传递不要使用None，可以用''代替![image-20200725102523868](F:\MyNotebook\doc\picture\规范-11.png)
-12.      函数参数传参时，如果使用‘=’，则‘=’两边不允许有空格，![image-20200725115133117](F:\MyNotebook\doc\picture\规范-12.png)
-13.      函数返回值赋给一个或多个变量，某些变量未被使用时，不要用变量名去接受返回值，请使用‘_’：![image-20200725121821006](F:\MyNotebook\doc\picture\规范-13.png)
-14.      if 语句中有多个条件时，请用()将每个条件括起来 ![image-20200725142613989](F:\MyNotebook\doc\picture\规范-14.png)
-15.    for循环使用是，单字母字符串一般作为索引使用，不要将其作为一个列表或元祖的元素使用，如果要使用，请更换变量名。![image-20200727115139761](F:\MyNotebook\doc\picture\规范-15.png)
-16.    使用`#`注释时，请在`#`后加一个空格![image-20200727115520147](F:\MyNotebook\doc\picture\规范-16.png)
-17.    变量与None进行判断时，None无需添加引号，如果添加了引号，'None'与None是不一样的，另外，判断变量是否为None，请使用 `if a is None`或者 `if a is not None`，尽量不要使用 `==`。![image-20200727120439861](F:\MyNotebook\doc\picture\规范-17.png)
-18.    跨行代码请注意，如果换行是在`()`内部，不需要使用 `\` ,如果不在`()`内部，在使用 `\`时，请注意，需在`\`前留一个空格（像这种`a.b()`函数调用时，如果是在`.`和`b`之间使用\,则不需要添加空格），即` \`，另外，不要将函数名和`(`分在两行，尽量在`()`进行跨行。![image-20200727143705971](F:\MyNotebook\doc\picture\规范-18.png)
-19.    参数传递时，必备参数个数必须与函数定义中保持一致，![image-20200727150012204](F:\MyNotebook\doc\picture\规范-19.png)![image-20200727150057519](F:\MyNotebook\doc\picture\规范-20.png)
-20.    引用公共类时，尽量从模块名中把该公共类导入进来，不建议直接导入模块名。![image-20200727154123483](F:\MyNotebook\doc\picture\规范-21.png)![image-20200727154304386](F:\MyNotebook\doc\picture\规范-22.png)
-21.   if 语句有多条件或较复杂条件判断时，请适当添加括号，增加可读性。![image-20200730201124248](F:\MyNotebook\doc\picture\规范-23.png)
-22.   变量赋值操作，如果=右边函数有多个返回值，=左边不要添加[]，只要=左边的变量个数与右边返回值个数一致即可 ![image-20200731165258356](F:\MyNotebook\doc\picture\规范-24.png)
-23.   if 语句判断变量是否为true, false, 0, 1时，尽量使用`if var` 或者 `if not var`，![image-20200731170138170](F:\MyNotebook\doc\picture\规范-25.png)
-24.    注释中不要出现无意义的空行，另外，函数中为显示某一块代码的独立性，可以适当添加空行，但空行中不要留有空格![image-20200801144924098](F:\MyNotebook\doc\picture\规范-26.png)
-25.    未被脚本引用的模块请去除（import add_syspath除外）![image-20200801151139091](F:\MyNotebook\doc\picture\规范-27.png)
+10.  返回值判断不要直接用0或1，需要使用枚举常量，0和1可以使用在索引位置处![image-20200725101321116](F:\MyNotebook\doc\picture\规范-10.png)
+11.  函数参数传递不要使用None，可以用''代替![image-20200725102523868](F:\MyNotebook\doc\picture\规范-11.png)
+12.  函数参数传参时，如果使用‘=’，则‘=’两边不允许有空格，![image-20200725115133117](F:\MyNotebook\doc\picture\规范-12.png)
+13.  函数返回值赋给一个或多个变量，某些变量未被使用时，不要用变量名去接受返回值，请使用‘_’：![image-20200725121821006](F:\MyNotebook\doc\picture\规范-13.png)
+14.  if 语句中有多个条件时，请用()将每个条件括起来 ![image-20200725142613989](F:\MyNotebook\doc\picture\规范-14.png)
+15.  for循环使用是，单字母字符串一般作为索引使用，不要将其作为一个列表或元祖的元素使用，如果要使用，请更换变量名。![image-20200727115139761](F:\MyNotebook\doc\picture\规范-15.png)
+16.  使用`#`注释时，请在`#`后加一个空格![image-20200727115520147](F:\MyNotebook\doc\picture\规范-16.png)
+17.  变量与None进行判断时，None无需添加引号，如果添加了引号，'None'与None是不一样的，另外，判断变量是否为None，请使用 `if a is None`或者 `if a is not None`，尽量不要使用 `==`。![image-20200727120439861](F:\MyNotebook\doc\picture\规范-17.png)
+18.  跨行代码请注意，如果换行是在`()`内部，不需要使用 `\` ,如果不在`()`内部，在使用 `\`时，请注意，需在`\`前留一个空格（像这种`a.b()`函数调用时，如果是在`.`和`b`之间使用\,则不需要添加空格），即` \`，另外，不要将函数名和`(`分在两行，尽量在`()`进行跨行。![image-20200727143705971](F:\MyNotebook\doc\picture\规范-18.png)
+19.  参数传递时，必备参数个数必须与函数定义中保持一致，![image-20200727150012204](F:\MyNotebook\doc\picture\规范-19.png)![image-20200727150057519](F:\MyNotebook\doc\picture\规范-20.png)
+20.  引用公共类时，尽量从模块名中把该公共类导入进来，不建议直接导入模块名。![image-20200727154123483](F:\MyNotebook\doc\picture\规范-21.png)![image-20200727154304386](F:\MyNotebook\doc\picture\规范-22.png)
+21.  if 语句有多条件或较复杂条件判断时，请适当添加括号，增加可读性。![image-20200730201124248](F:\MyNotebook\doc\picture\规范-23.png)
+22.  变量赋值操作，如果=右边函数有多个返回值，=左边不要添加[]，只要=左边的变量个数与右边返回值个数一致即可 ![image-20200731165258356](F:\MyNotebook\doc\picture\规范-24.png)
+23.  if 语句判断变量是否为true, false, 0, 1时，尽量使用`if var` 或者 `if not var`，![image-20200731170138170](F:\MyNotebook\doc\picture\规范-25.png)
+24.  注释中不要出现无意义的空行，另外，函数中为显示某一块代码的独立性，可以适当添加空行，但空行中不要留有空格![image-20200801144924098](F:\MyNotebook\doc\picture\规范-26.png)
+25.  未被脚本引用的模块请去除（import add_syspath除外）![image-20200801151139091](F:\MyNotebook\doc\picture\规范-27.png)
+26.    类变量尽量不要在类方法中直接定义并赋值，特别是这个类变量在其他方法中也被引用时，如下图所示，在prepare中定义了类变量并赋值，并在post中引用了类变量，如果在prepare中，代码再变量定义之前出现异常，prepare函数退出，post函数会继续运行，此时post再引用类变量时就会报错。所以类变量最好在类中先提前声明。![image-20200806111912020](C:\Users\haibi\AppData\Roaming\Typora\typora-user-images\image-20200806111912020.png)![image-20200806111947017](C:\Users\haibi\AppData\Roaming\Typora\typora-user-images\image-20200806111947017.png)
